changed chat script to bitner dfot2 test chat

--- a/contact.html
+++ b/contact.html
@@ -28,16 +28,18 @@
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-<script>
-                    (function (i, s, o, r, g, v, a, m) {
-                    g = v ? g + '?v=' + v : g; i['BrandEmbassy'] = r;
-                    i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }; i[r].l = +new Date();
-                    a = s.createElement(o); m = s.getElementsByTagName(o)[0]; a.async = 1;
-                    a.src = g + '?' + Math.round(Date.now() / 1000 / 3600); m.parentNode.insertBefore(a, m)
-                    }) (window, document, 'script', 'brandembassy', 'https://livechat-static-de-na1.niceincontact.com/4/chat.js');
+      
+      <script> // dfot2 bitner test chat
+         (function (i, s, o, r, g, v, a, m) {
+         g = v ? g + '?v=' + v : g; i['BrandEmbassy'] = r;
+         i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }; i[r].l = +new Date();
+         a = s.createElement(o); m = s.getElementsByTagName(o)[0]; a.async = 1;
+         a.src = g + '?' + Math.round(Date.now() / 1000 / 3600); m.parentNode.insertBefore(a, m)
+         }) (window, document, 'script', 'brandembassy', 'https://livechat-static-de-na1.niceincontact.com/4/chat.js');
+         
+         brandembassy('init', 1018, 'chat_cf8e3faf-dc08-4f10-917d-62e5d3100f16');
+     </script>
 
-                    brandembassy('init', 1046, 'chat_e834d0dc-39f6-448f-8e07-0f4cb4fe72c7');
-                </script>
    </head>
    <!-- body -->
    <body class="main-layout">
