Added guide script to home page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 
+      <script> //dfot2 bitner guide
+         (function (i, s, o, r, g, v, a, m) {
+         g = v ? g + '?v=' + v : g; i['CXoneDfo'] = r;
+         i[r] = i[r] || function () {(i[r].q = i[r].q || []).push(arguments)}; i[r].l = +new Date(); i[r].u = g;
+         a = s.createElement(o); m = s.getElementsByTagName(o)[0]; a.async = true;
+         a.src = g + '?' + Math.round(Date.now() / 1000 / 3600); m.parentNode.insertBefore(a, m);
+         })(window, document, 'script', 'cxone', 'https://web-modules-de-na1.niceincontact.com/loader/1/loader.js');
+
+         cxone('init', '1018')
+         cxone('guide', 'init', '68d8df4a-ce5c-4b8f-a8c0-3e5cf95006a4')
+     </script>
+ 
+
 
    </head>
    <!-- body -->
