cleaned up wording on site

--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@
             <div class="row">
                <div class="col-md-8">
                   <div class="titlepage">
-                     <h2>Our Blog</h2>
+                     <h2>Eastridge Farms Blog</h2>
                      <p>there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined  </p>
                   </div>
                </div>
@@ -133,7 +133,7 @@
                      <div class="choose_box">
                         <i><img src="images/icon2.png" alt="#"/></i>
                         <div class="choose_text">
-                           <h3>Clean Working</h3>
+                           <h3>Working Environment</h3>
                            <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
                         </div>
                      </div>
@@ -151,7 +151,7 @@
                      <div class="choose_box">
                         <i><img src="images/icon4.png" alt="#"/></i>
                         <div class="choose_text">
-                           <h3>Expert Farmer</h3>
+                           <h3>Years of Expertise</h3>
                            <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
                         </div>
                      </div>
@@ -221,7 +221,7 @@
                   
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locations</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
                      </ul>
@@ -229,7 +229,7 @@
                   <div class="col-md-3 border_right">
                      <h3>Useful Link</h3>
                      <ul class="link">
-                        <li><a href="#">humour, or </a></li>
+                        <li><a href="#">humour</a></li>
                         <li><a href="#">randomised words </a> </li>
                         <li><a href="#">which don't look </a></li>
                         <li><a href="#">even slightly  </a> </li>
@@ -259,7 +259,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2019 - Eastridge Farms</p>
                      </div>
                   </div>
                </div>
