--- a/contact.html
+++ b/contact.html
@@ -146,15 +146,15 @@
                   
                    <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locations</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
                      </ul>
                   </div>
                   <div class="col-md-3 border_right">
-                     <h3>Useful Link</h3>
+                     <h3>Helpful Links</h3>
                      <ul class="link">
-                        <li><a href="#">humour, or </a></li>
+                        <li><a href="#">humour</a></li>
                         <li><a href="#">randomised words </a> </li>
                         <li><a href="#">which don't look </a></li>
                         <li><a href="#">even slightly  </a> </li>
@@ -184,7 +184,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2019 - Eastridge Farms</p>
                      </div>
                   </div>
                </div>
