--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="row">
                <div class="col-md-12 ">
                   <div class="text-bg">
-                     <h1>FARMING COMPANY</h1>
+                     <h1>EASTRIDGE FARMS</h1>
                      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it</p>
                      <a href="https://chrisbitner.github.io/ChrisFarmSite/fullScreenChat.html" target="_blank">Chat With Us</a>
                   </div>
@@ -148,7 +148,7 @@
             <div class="row d_flex">
                <div class="col-md-5">
                   <div class="titlepage">
-                     <h2>World’s Hottest Destinations <br>for Vegans</h2>
+                     <h2>Freshest fruits and vegetables</h2>
                   </div>
                </div>
                <div class="col-md-7">
@@ -192,7 +192,7 @@
                            <div class="choose_box">
                               <i><img src="images/icon2.png" alt="#"/></i>
                               <div class="choose_text">
-                                 <h3>Clean Working</h3>
+                                 <h3>Working Environment</h3>
                                  <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
                               </div>
                            </div>
@@ -210,7 +210,7 @@
                            <div class="choose_box">
                               <i><img src="images/icon4.png" alt="#"/></i>
                               <div class="choose_text">
-                                 <h3>Expert Farmer</h3>
+                                 <h3>Years of Expertise</h3>
                                  <p>It is a long established fact that a reader will be distracted by the readable content of a</p>
                               </div>
                            </div>
@@ -241,7 +241,7 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="titlepage">
-                     <h2>Our Product</h2>
+                     <h2>Our Products</h2>
                   </div>
                </div>
             </div>
@@ -251,25 +251,25 @@
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 padding_left0">
                   <div class="product_box">
                      <figure><img src="images/product1.jpg" alt="#"/></figure>
-                     <h3 class="black">vegetable</h3>
+                     <h3 class="black">vegetables</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                   <div class="product_box">
                      <figure><img src="images/product2.jpg" alt="#"/></figure>
-                     <h3 >weat</h3>
+                     <h3 >Wheat</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 padding_right0">
                   <div class="product_box">
                      <figure><img src="images/product3.jpg" alt="#"/></figure>
-                     <h3>fruit</h3>
+                     <h3>fruits</h3>
                   </div>
                </div>
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 padding_left0">
                   <div class="product_box">
                      <figure><img src="images/product4.jpg" alt="#"/></figure>
-                     <h3>sunflowere</h3>
+                     <h3>sunflowers</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
@@ -288,7 +288,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>People Says About Farm</h2>
+                     <h2>Eastridge Farm Reviews</h2>
                   </div>
                </div>
             </div>
@@ -404,15 +404,15 @@
                   </div>
                   <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locations</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
                      </ul>
                   </div>
                   <div class="col-md-3 border_right">
-                     <h3>Useful Link</h3>
+                     <h3>Helpful Links</h3>
                      <ul class="link">
-                        <li><a href="#">humour, or </a></li>
+                        <li><a href="#">humour</a></li>
                         <li><a href="#">randomised words </a> </li>
                         <li><a href="#">which don't look </a></li>
                         <li><a href="#">even slightly  </a> </li>
@@ -442,7 +442,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2019 - Eastridge Farms</p>
                      </div>
                   </div>
                </div>
