--- a/products.html
+++ b/products.html
@@ -107,7 +107,7 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="titlepage">
-                     <h2>Our Product</h2>
+                     <h2>Our Products</h2>
                   </div>
                </div>
             </div>
@@ -117,25 +117,25 @@
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 padding_left0">
                   <div class="product_box">
                      <figure><img src="images/product1.jpg" alt="#"/></figure>
-                     <h3 class="black">vegetable</h3>
+                     <h3 class="black">vegetables</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                   <div class="product_box">
                      <figure><img src="images/product2.jpg" alt="#"/></figure>
-                     <h3 >weat</h3>
+                     <h3 >Wheat</h3>
                   </div>
                </div>
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 padding_right0">
                   <div class="product_box">
                      <figure><img src="images/product3.jpg" alt="#"/></figure>
-                     <h3>fruit</h3>
+                     <h3>fruits</h3>
                   </div>
                </div>
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 padding_left0">
                   <div class="product_box">
                      <figure><img src="images/product4.jpg" alt="#"/></figure>
-                     <h3>sunflowere</h3>
+                     <h3>sunflowers</h3>
                   </div>
                </div>
                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 padding_right0">
@@ -189,15 +189,15 @@
                   </div>
                   <div class="col-md-3 border_right">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
+                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locations</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
                      </ul>
                   </div>
                   <div class="col-md-3 border_right">
-                     <h3>Useful Link</h3>
+                     <h3>Helpful Links</h3>
                      <ul class="link">
-                        <li><a href="#">humour, or </a></li>
+                        <li><a href="#">humour</a></li>
                         <li><a href="#">randomised words </a> </li>
                         <li><a href="#">which don't look </a></li>
                         <li><a href="#">even slightly  </a> </li>
@@ -227,7 +227,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2019 - Eastridge Farms</p>
                      </div>
                   </div>
                </div>
