started buttons page

--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
 <li><a href="products.html">Products</a></li>                             
 <li><a href="blog.html">Blog</a></li>
 <li><a href="contact.html">Contact</a></li>
+<li><a href="chatButtons.html">Chat Buttons</a></li>
                      </ul>
                   </div>
                   <div class="col-md-3">
