fixed messaging button label

--- a/chatButtons.html
+++ b/chatButtons.html
@@ -97,9 +97,9 @@
             const dfot2BitnerMessagingTest = document.createElement('button')
 
             // Set the button text
-            dfot2BitnerMessagingTest.innerText = 'DFOT2 - Bitner LiveChat Studio'
+            dfot2BitnerMessagingTest.innerText = 'DFOT2 - Bitner Messaging Test'
 
-            dfot2BitnerMessagingTest.id = 'DFOT2 - Bitner LiveChat Studio'
+            dfot2BitnerMessagingTest.id = 'DFOT2 - Bitner Messaging Test'
 
             // Attach the "click" event to your button
             dfot2BitnerMessagingTest.addEventListener('click', () => {
