--- a/chatButtons.html
+++ b/chatButtons.html
@@ -85,9 +85,10 @@
             }) (window, document, 'script', 'brandembassy', 'https://livechat-static-de-na1.niceincontact.com/4/chat.js');
 
             brandembassy('init', 1018, 'chat_7b53c9e1-3b4b-4337-9903-cbf5f3e40a68');
-            //brandembassy('autoStartSession');
+            brandembassy('hidePreSurvey');
             brandembassy('openChatWindow');
-            //brandembassy('sendFirstMessageAutomatically', 'Starting Conversation');            
+            brandembassy('autoStartSession');
+            brandembassy('sendFirstMessageAutomatically', 'Starting Conversation');            
             })
 
             document.body.appendChild(dfot2BitnerLivechatStudio)
