--- a/about.html
+++ b/about.html
@@ -37,6 +37,10 @@
          }) (window, document, 'script', 'brandembassy', 'https://livechat-static-de-na1.niceincontact.com/4/chat.js');
          
          brandembassy('init', 1018, 'chat_cf8e3faf-dc08-4f10-917d-62e5d3100f16');
+         brandembassy('setWindowWidth', '30%');
+          brandembassy('setWindowHeight', '70%');
+          brandembassy('enableCloseIcon', true);
+
      </script>
 
    </head>
